Atualização de versão 8 de 28/09/2021: correção gramatical pontual no inscricoes-ego.

--- a/inscricoes-ego.html
+++ b/inscricoes-ego.html
@@ -56,7 +56,7 @@
         <hr>
         <p class="blocktext"><strong>Estão abertas as inscrições para o Processo Seletivo da Escola General Osório, em Campo Grande, MS.</strong></p>
         <p class="blocktext">As inscrições podem ser feitas no formulário abaixo ou no <a href="http://egocg.com.br/matricula" target="_blank" class="text-primary">site da Escola</a>.</p>
-        <p class="blocktext"><strong>O conteúdo das provas pode ser consultado</strong> clicando <a href="http://egocg.com.br/ementas_provas" target="_blank" class="text-primary">aqui</a>, de acordo com a série/ano desejada(o).</p>
+        <p class="blocktext"><strong>O conteúdo das provas pode ser consultado</strong> clicando-se <a href="http://egocg.com.br/ementas_provas" target="_blank" class="text-primary">aqui</a>, de acordo com a série/ano desejada(o).</p>
         <p class="blocktext">A Escola enviará demais informações para o e-mail cadastrado no formulário de inscrições abaixo, até o dia <strong>29/09/2021</strong>, então é importante ficar atento.</p>
         <hr>
         <div class="row text-center">
