Atualização de versão de 04/10/2021: incluído o banner-chamada para as inscrições IFMS 2021. Criado o hotsite Inscrições IFMS.

--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
         <!-- The slideshow -->
         <div class="carousel-inner">
             <div class="carousel-item active">
+                <a href="hosite-inscricoes-ifms.html"><img src="./img/IFMS-2021.jpg" class="img-fluid" alt="Preparatório IFMS"></a>
+            </div>
+            <div class="carousel-item">
                 <a href="inscricoes-ego.html"><img src="./img/EGO-2022_1200-285.jpg" class="img-fluid"></a> 
             </div>
             <div class="carousel-item">
@@ -88,9 +91,6 @@
             </div>
             <div class="carousel-item">
                 <a href="calendario-de-aulas.html"> <img src="./img/retorno-aulas.jpg" class="img-fluid"> </a>
-            </div>
-            <div class="carousel-item">
-                <a href="prep-if.html"><img src="./img/logo_IF_2021.png" class="img-fluid" alt="Preparatório IFMS"></a>
             </div>
             <div class="carousel-item">
                 <a href="espiritismo.html"><img src="./img/cosmos2.png" class="img-fluid" alt="Ensino Religioso"></a>
