Atualização de versão de 04/10/2021: alterado o tamanho de exibição do vídeo de ajuda do IFMS.

--- a/hosite-inscricoes-ifms.html
+++ b/hosite-inscricoes-ifms.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>HotSite IFMS 2021 - Instituto Ser Integral</title>
+  <title>HotSite IFMS 2021   - Instituto Ser Integral</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.5.4/umd/popper.min.js"></script>
@@ -56,7 +56,7 @@
     <p class="blocktext">Assista ao <a href="https://www.youtube.com/watch?v=rGgzg_muDpQ" target="_blank" class="text-primary"><strong>vídeo</strong></a> abaixo e veja como proceder.</p>
     <hr>
     <p class="blocktext">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/rGgzg_muDpQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/rGgzg_muDpQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </p>
     <hr>
     <p class="blocktext">Fonte: <a href="https://www.ifms.edu.br/" target="_blank" class="text-primary"><strong>IFMS</strong></a></p>
