--- a/hotsite.html
+++ b/hotsite.html
@@ -12,7 +12,6 @@
   <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js"></script>
   <link rel="stylesheet" href="./css/main.css">
 </head>
-
 <body bgcolor="#f8f8ff">
   <!-- Navigation -->
   <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
@@ -48,38 +47,23 @@
       </div>
     </div>
   </nav>
-  <div class="p-3 mb-2 bg-light text-dark">
-    <h5 class="blocktext text-center">Colégio Militar</h5>
-    <h5 class="blocktext text-center">Faltam</h5>
-    <h1 class="blocktext text-center text-primary" id="timer"></h1>
-    <h5 class="blocktext text-center">para o Concurso do Colégio Militar!</h5>
-    <p class="blocktext"><i>(Atualizado em 16/08/2021)</i></p>
+  <div class="container">
+    <h4 class="blocktext text-center">Colégio Militar</h4>
+    <h5 class="blocktext text-center">É Hoje o Grande Dia!</h5>
     <hr>
-    <p class="blocktext"><strong>Estão abertas as inscrições para o Concurso do Colégio Militar</strong>, conforme matéria publicada em 09 de agosto de 2021.</p>
-    <p class="blocktext">As inscrições podem ser feitas nos postos listados abaixo ou no <a href="https://www.cmcg.eb.mil.br/" target="_blank" class="text-primary">site do CM</a>.</p>
-    <p class="blocktext">Caso queiram, <strong>os pais podem realizar a inscrição online</strong>, clicando <a href="https://cmcg.perseuconcursos.com.br/login" target="_blank" class="text-primary">aqui.</a> Basta cadastrar o CPF e o RG do responsável, sendo que este último servirá de senha para o acesso.</p>
-    <p class="blocktext">A leitura do <strong>Manual do Aluno</strong> é importantíssima, pois ele contém detalhes sobre o dia da realização da prova.</p>
-    <hr>
-    <p class="blocktext"><iframe src="https://drive.google.com/file/d/1qPmYgaTBtfvHOnOY9TIBvwAQ3Gneczcv/preview" id="form-edital" allow="autoplay" frameborder="1"></iframe></p>
-    <hr>
-    <p class="blocktext"><strong>Confira o artigo publicado em 09 de agosto, na íntegra:</strong></p>
-    <hr>
-    <p class="blocktext">Campo Grande, 9 de agosto de 2021</p>
-    <h6 class="blog">Exército divulga edital do Concurso para os Colégios Militares</h6>
-    <p class="blocktext">O Departamento de Educação e Cultura do Exército (DECEX), publicou no Diário Oficial da União (DOU), nesta quarta-feira (04/08/2021), o <a href="https://www.in.gov.br/en/web/dou/-/edital-n-1-de-3-de-agosto-de-2021processo-seletivo-de-admissao-2021/2022-aos-colegios-militares-336301971" target="_blank" class="text-primary">edital do Concurso</a> para os Colégios Militares que fazem parte do Sistema Colégio Militar do Brasil (SCMB).</p>
-    <p class="blocktext"><strong>O período de inscrições será de 18 de agosto a 24 de setembro de 2021</strong>, então é importante ficar atento.  Nós, do Instituto Ser Integral, publicaremos as novidades e etapas do concurso aqui no site e manteremos os alunos informados também nos grupos de Whatsapp.</p>
-    <p class="blocktext">É importante que os pais ou responsáveis acessem o <a href="https://www.in.gov.br/en/web/dou/-/edital-n-1-de-3-de-agosto-de-2021processo-seletivo-de-admissao-2021/2022-aos-colegios-militares-336301971" target="_blank" class="text-primary">edital do Concurso</a>, bem como a <a href="https://www.cmcg.eb.mil.br/" target="_blank" class="text-primary">página oficial</a> do Colégio Militar de Campo Grande (CMCG).</p>
-    <p class="blocktext">Ano passado, o Instituto aprovou dois alunos, sendo uma no CMCG e outro no Colégio Militar de Belém (CMBel).</p>
-    <p class="blocktext"><strong>A prova escrita está prevista para o dia 17 de outubro de 2021.</strong></p>
-    <p class="blocktext">Em breve, divulgaremos mais informações.</p>
-    <hr>
-    <p class="blocktext">Fonte: <a href="https://www.cmcg.eb.mil.br/" target="_blank" class="text-primary">Colégio Militar de Campo Grande</a> e <a href="https://www.in.gov.br/en/web/dou/-/edital-n-1-de-3-de-agosto-de-2021processo-seletivo-de-admissao-2021/2022-aos-colegios-militares-336301971" target="_blank" class="text-primary"> Diário Oficial da União</a></p>
-    <hr>
-    <p class="blocktext">Confira os postos de inscrição, o número de vagas e o site do Colégio Militar da sua região:</p>
-    <p class="blocktext"><iframe src="https://drive.google.com/file/d/1RDCdlomvrifW_QLbbjycKIB-QNik-w62/preview" id="form-edital" allow="autoplay" frameborder="1"></iframe></p>
-    <hr>
-    <p class="blocktext"></p>
-    <hr>
+      <div class="row text-center padding">
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
+          <img src="./img/aluna_eduarda.jpg" width="400" height="600" alt="Foto: Eduarda Helina/CMCG">
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 vertical">
+          <p class="blocktext">O grande dia do Concurso do Colégio Militar chegou e nós, do Instituto Ser Integral, não poderíamos deixar de desejar um ótima prova para os nossos alunos em todo o Brasil.</p>
+          <p class="blocktext">Para tanto, deixamos um incentivo com a foto de nossa aluna Eduarda Helina.</p>
+          <p class="blocktext">Nossa dedicada aluna é a 1ª de sua classe e a 6ª colocada do 6º Ano no Colégio Militar de Grande.</p>
+          <p class="blocktext">Ela ainda ganhou a Medalha de Ouro nas Olimpíadas Canguru de Matemática Brasil, uma competição anual internacional, destinada aos alunos do 3º ano do Ensino Fundamental até a 3ª série do Ensino Médio. A competição teve origem na França e é administrada globalmente pela Associação Canguru sem Fronteiras (Association Kangourou sans Frontières - AKSF).</p>
+          <p class="blocktext">Os nossos parabéns à Aluna Eduarda Helina e a todos os nossos alunos desejamos uma excelente prova! Fé em Deus! Vocês estudaram e se dedicaram o ano inteiro para que possam vibrar e vencer neste dia com garra, determinação e tranquilidade!</p>
+          <p class="blocktext"><i>Zum Zaravalho Opum!</i></p>
+        </div>
+      </div>
   </div>
   <div class="col-12">
     <h6 class="blog">Veja também</h6>
