--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
         <!-- The slideshow -->
         <div class="carousel-inner">
             <div class="carousel-item active">
+                <a href="hotsite.html"><img src="./img/cm-dia-prova-red.jpg" class="img-fluid"></a> 
+            </div>
+            <div class="carousel-item">
                 <a href="hosite-inscricoes-ifms.html"><img src="./img/IFMS-2021.jpg" class="img-fluid" alt="Preparatório IFMS"></a>
             </div>
             <div class="carousel-item">
                 <a href="inscricoes-ego.html"><img src="./img/EGO-2022_1200-285.jpg" class="img-fluid"></a> 
-            </div>
-            <div class="carousel-item">
-                <a href="hotsite.html"><img src="./img/Data-Prova-CM.jpg" class="img-fluid"></a> 
             </div>
             <div class="carousel-item">
                 <a href="hotsite-edital-cm.html"><img src="./img/edital-cm-na-integra.jpg" class="img-fluid"></a> 
