Atualização de versão 2 de 16/10/2021: Correção ortográfica pontual!

--- a/hotsite.html
+++ b/hotsite.html
@@ -58,7 +58,7 @@
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 vertical">
           <p class="blocktext">O grande dia do Concurso do Colégio Militar chegou e nós, do Instituto Ser Integral, não poderíamos deixar de desejar um ótima prova para os nossos alunos em todo o Brasil.</p>
           <p class="blocktext">Para tanto, deixamos um incentivo com a foto de nossa aluna Eduarda Helina.</p>
-          <p class="blocktext">Nossa dedicada aluna é a 1ª de sua classe e a 6ª colocada do 6º Ano no Colégio Militar de Grande.</p>
+          <p class="blocktext">Nossa dedicada aluna é a 1ª de sua classe e a 6ª colocada do 6º Ano no Colégio Militar de Campo Grande.</p>
           <p class="blocktext">Ela ainda ganhou a Medalha de Ouro nas Olimpíadas Canguru de Matemática Brasil, uma competição anual internacional, destinada aos alunos do 3º ano do Ensino Fundamental até a 3ª série do Ensino Médio. A competição teve origem na França e é administrada globalmente pela Associação Canguru sem Fronteiras (Association Kangourou sans Frontières - AKSF).</p>
           <p class="blocktext">Os nossos parabéns à Aluna Eduarda Helina e a todos os nossos alunos desejamos uma excelente prova! Fé em Deus! Vocês estudaram e se dedicaram o ano inteiro para que possam vibrar e vencer neste dia com garra, determinação e tranquilidade!</p>
           <p class="blocktext"><i>Zum Zaravalho Opum!</i></p>
