Atualização de versão de 21/10/2021: incluídos/alterados 3 banners e o site com o gabarito oficial do colégio militar.

--- a/hotsite-gab-cm.html
+++ b/hotsite-gab-cm.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>HotSite IFMS 2021   - Instituto Ser Integral</title>
+  <title>HotSite - Instituto Ser Integral</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.5.4/umd/popper.min.js"></script>
@@ -48,65 +48,97 @@
       </div>
     </div>
   </nav>
+  <h6 class="blog">Colégio Militar de Campo Grande - MS</h6>
+  <h6 class="blog">GABARITO Oficial Preliminar</h6>
   <div class="p-3 mb-2 bg-light text-dark">
-    <p class="blocktext">Campo Grande, 21 de Outubro de 2021</p>
-    <p class="blocktext">As inscrições para o Instituto Federal de Mato Grosso do Sul - IFMS - foram <strong>prorrogadas até 25 de Outubro de 2021</strong> e podem ser feitas no <a href="http://selecao.ifms.edu.br/login" target="_blank" class="text-primary"><strong>site do IFMS</strong></a>.</p>
-    <p class="blocktext">Caso <strong>NÃO</strong> possua cadastro, o candidato deverá efetuá-lo <a href="http://selecao.ifms.edu.br/cadastro" target="_blank" class="text-primary"><strong>neste link</strong>.</a></p>
-    <p class="blocktext">Assista ao <a href="https://www.youtube.com/watch?v=rGgzg_muDpQ" target="_blank" class="text-primary"><strong>vídeo</strong></a> abaixo e veja como proceder.</p>
-    <hr>
-    <p class="blocktext">
-        <iframe src="https://www.youtube.com/embed/rGgzg_muDpQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </p>
-    <hr>
-    <p class="blocktext">Fonte: <a href="https://www.ifms.edu.br/" target="_blank" class="text-primary"><strong>IFMS</strong></a></p>
-    <hr>
-</div>
-<div class="container">
-    <div class="col-12">
-        <h6 class="blog">Prepare-se adequadamente</h6>
-        <hr>
+    <div class="row justify-content-center">
+      <div class="col-auto">
+        <table class="table table-responsive">
+          <tbody>
+            <tr>
+              <td>01</td>
+              <td>E</td>
+              <td>07</td>
+              <td>E</td>
+              <td>13</td>
+              <td>E</td>
+              <td>19</td>
+              <td>E</td>
+            </tr>
+            <tr>
+              <td>02</td>
+              <td>C</td>
+              <td>08</td>
+              <td>C</td>
+              <td>14</td>
+              <td>A</td>
+              <td>20</td>
+              <td>B</td>
+            </tr>
+            <tr>
+            <td>03</td>
+            <td>B</td>
+            <td>09</td>
+            <td>B</td>
+            <td>15</td>
+            <td>C</td>
+            <td>21</td>
+            <td>A</td>
+          </tr>
+          <tr>
+            <td>04</td>
+            <td>A</td>
+            <td>10</td>
+            <td>B</td>
+            <td>16</td>
+            <td>D</td>
+            <td>22</td>
+            <td>C</td>
+          </tr>
+          <tr>
+            <td>05</td>
+            <td>E</td>
+            <td>11</td>
+            <td>C</td>
+            <td>17</td>
+            <td>D</td>
+            <td>23</td>
+            <td>E</td>
+          </tr>
+          <tr>
+            <td>06</td>
+            <td>D</td>
+            <td>12</td>
+            <td>A</td>
+            <td>18</td>
+            <td>C</td>
+            <td>24</td>
+            <td>D</td>
+          </tr>
+        </tbody>
+       </table>
+      </div>
     </div>
-    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-        <div class="col">
-            <div class="card text-white bg-success">
-                <iframe src="https://www.youtube.com/embed/videoseries?list=PLiSQt8QtUwiiYQ-frX8eUUb79mQg_kXdb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <div class="card-body">
-                    <div class="text-center">
-                        <h6 class="card-title">IFMS</h6>
-                        <p class="card-text"> PLAYLIST <br><br> LÍNGUA PORTUGUESA </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col">
-            <div class="card text-white bg-success">
-                <iframe src="https://www.youtube.com/embed/videoseries?list=PLiSQt8QtUwigR7Ci_8qwu2FO9CqU2MeQl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <div class="card-body">
-                    <div class="text-center">
-                        <h6 class="card-title">IFMS</h6>
-                        <p class="card-text"> PLAYLIST <br><br> MATEMÁTICA </p>
-                    </div>
-                </div>
-            </div>   
-        </div>
-        <div class="col">
-            <div class="card text-white bg-success">
-                <a href="prep-if.html"><img src="./img/Preparatorio-IFMS.jpg" frameborder="0" width="286px" height="120px" alt="Preparatório IFMS"></a> 
-                <div class="card-body">
-                    <div class="text-center">
-                        <h6 class="card-title">IFMS</h6>
-                        <p class="card-text"> PREPARATÓRIO <br><br> IFMS </p>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <hr>
+    <h6 class="blog">Fonte: <a href="https://www.cmcg.eb.mil.br/" target="_blank" class="text-primary">Colégio Militar de Campo Grande</a></h6>
+    <hr>
+  </div>
+  <div class="col-12">
+    <h6 class="blog">Veja também</h6>
+    <hr>
+  </div>
+  <div class="row text-center padding">
+    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+      <a href="hotsite.html"><img src="./img/min-hotsite-cm.jpg" class="hotsite" alt=""></a>
     </div>
-</div>
-<footer class="footer">
+    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+      <a href="hotsite-edital-cm.html"><img src="./img/min-edital-na-integra.jpg" class="hotsite" alt=""></a>
+    </div>
+  </div>
+  <footer class="footer">
     <div class="container-fluid padding">
       <div class="row text-center">
         <div class="col-md-4">
-          <!-- <img src="img/logo-ser-integral_t2.png" alt="Página inicial"> -->
           <hr>
           <h6>Fale Conosco</h6>
           <hr>
@@ -137,7 +169,7 @@
       </div>
     </div>
   </footer>
-  <div style="position:fixed; bottom:0px; right:30px;">
+    <div style="position:fixed; bottom:0px; right:30px;">
     <a href="#" title="Voltar para o topo"><i class="fas fa-arrow-alt-circle-up"></i></a>
   </div>
 </body>
