--- a/inscricoes-ego.html
+++ b/inscricoes-ego.html
@@ -50,6 +50,20 @@
   </nav>
     <div class="container"> <!-- class="p-3 mb-2 bg-light text-dark" -->
       <div class="container-fluid padding">
+        <p class="blocktext">Campo Grande, 21 de outubro de 2021</p>
+        <h6 class="blog">Processo Seletivo para a Escola General Osório</h6>
+        <h6 class="blog">Prova 22 de Out de 2021</h6>
+        <hr>
+        <p class="blocktext">Desejamos a todos os nossos alunos que farão a prova do EGO amanhã (22/OUT) uma excelente prova! Concentrem-se, tenham fé e tranquilidade, aproveitem todo o tempo
+          da prova. 
+        </p>
+        <p class="blocktext"><strong>Estamos torcendo por vocês!</strong></p>
+        <p class="blocktext"><strong>O conteúdo das provas pode ser consultado</strong> clicando-se <a href="http://egocg.com.br/ementas_provas" target="_blank" class="text-primary">aqui</a>, de acordo com a série/ano desejada(o).</p>
+        <hr>
+        <p class="blocktext">Fonte: <a href="http://egocg.com.br/" target="_blank" class="text-primary">Escola General Osório.</a></p>
+        <hr>
+      </div>
+      <div class="container-fluid padding">
         <p class="blocktext">Campo Grande, 16 de setembro de 2021</p>
         <h6 class="blog">Processo Seletivo para a Escola General Osório</h6>
         <h6 class="blog">Inscrições Abertas</h6>
