--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
         <!-- The slideshow -->
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <a href="hotsite.html"><img src="./img/cm-dia-prova-red.jpg" class="img-fluid"></a> 
+                <a href="inscricoes-ego.html"><img src="./img/provaEgo2021.jpg" class="img-fluid"></a> 
             </div>
             <div class="carousel-item">
-                <a href="hosite-inscricoes-ifms.html"><img src="./img/IFMS-2021.jpg" class="img-fluid" alt="Preparatório IFMS"></a>
+                <a href="hosite-inscricoes-ifms.html"><img src="./img/IFMS-2022.jpg" class="img-fluid" alt="Preparatório IFMS"></a>
             </div>
             <div class="carousel-item">
-                <a href="inscricoes-ego.html"><img src="./img/EGO-2022_1200-285.jpg" class="img-fluid"></a> 
+                <a href="hotsite-gab-cm.html"><img src="./img/gab-cm-2021-22.jpg" class="img-fluid"></a> 
             </div>
             <div class="carousel-item">
                 <a href="hotsite-edital-cm.html"><img src="./img/edital-cm-na-integra.jpg" class="img-fluid"></a> 
