--- a/index.html
+++ b/index.html
@@ -137,17 +137,16 @@
     <!-- Vídeos -->
     <div class="container-fluid padding">
         <div class="col-12">
-            <h6>Vídeos novos</h6>
+            <h6>Novidades</h6>
         </div>
         <div class="row text-center padding">
             <!-- VÍDEO 1 -->
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><!-- <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"> -->
                 <div class="card text-white bg-info">
-                    <iframe src="https://www.youtube.com/embed/DM2KVCnaoVY" title="YouTube video player" frameborder="0" allow="accelerometer; 
-                    autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <a href="agradecimentos.html"><img src="./img/Aluno_Matheus.png" alt="Aluno Matheus Poganski" width="300" height="120"></a>
                     <div class="card-body">
-                        <h6 class="card-title">Preparatório CM</h6>
-                        <p class="card-text"> Matemática <br><br> CMM 2019/2020 <br><br>Turma Avançada</p>
+                        <h6 class="card-title">Agradecimento</h6>
+                        <p class="card-text">Aluno Matheus Poganski <br><br> e sua mãe, a Sr.ª Alice Poganski.</p>
                     </div>
                 </div>
             </div>
