--- a/index.html
+++ b/index.html
@@ -152,12 +152,11 @@
             </div>
             <!-- VÍDEO 2 -->
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
-                <div class="card text-white bg-warning">
-                    <iframe src="https://www.youtube.com/embed/DU7JkblJRdI" title="YouTube video player" frameborder="0" allow="accelerometer; 
-                    autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <div class="card text-black bg-warning">
+                    <a href="agradecimentos.html/agracedimento-omaybely"><img src="./img/Aluna_Omaybely.png" alt="Aluna Omaybely Perdomo" width="260" height="120"></a>
                     <div class="card-body">
-                        <h6 class="card-title">Preparatório CM</h6>
-                        <p class="card-text"> Português <br><br> Modos Verbais <br><br>Turma Iniciante</p>
+                        <h6 class="card-title">Agradecimento</h6>
+                        <p class="card-text">Aluna Omaybelly Perdomo<br><br> e sua mãe, a Sr.ª Gredibel Perdomo.</p>
                     </div>
                 </div>
             </div>
