Atualização de versão #2 de 22/11/2021: Incluído vídeo de revisão de prova de Matemática do EGO.

--- a/index.html
+++ b/index.html
@@ -145,18 +145,19 @@
                 <div class="card text-white bg-info">
                     <a href="agradecimentos.html"><img src="./img/Aluno_Matheus.png" alt="Aluno Matheus Poganski" width="300" height="120"></a>
                     <div class="card-body">
-                        <h6 class="card-title">Agradecimento</h6>
-                        <p class="card-text">Aluno Matheus Poganski <br><br> e sua mãe, a Sr.ª Alice Poganski.</p>
+                        <h6 class="card-title">Agradecimentos</h6>
+                        <p class="card-text">Aprovados EGO 2021</p>
                     </div>
                 </div>
             </div>
             <!-- VÍDEO 2 -->
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
                 <div class="card text-black bg-warning">
-                    <a href="agradecimentos.html/agracedimento-omaybely"><img src="./img/Aluna_Omaybely.png" alt="Aluna Omaybely Perdomo" width="260" height="120"></a>
+                    <iframe src="https://www.youtube.com/embed/MKpenbvjTpM" title="YouTube video player" frameborder="0" allow="accelerometer; 
+                    autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <div class="card-body">
-                        <h6 class="card-title">Agradecimento</h6>
-                        <p class="card-text">Aluna Omaybelly Perdomo<br><br> e sua mãe, a Sr.ª Gredibel Perdomo.</p>
+                        <h6 class="card-title">Turma Avançada</h6>
+                        <p class="card-text">Matemática<br><br> Revisão de Prova EGO</p>
                     </div>
                 </div>
             </div>
