Atualização de versão de 23/11/2021: Incluído vídeo de Redação para o Colégio Militar no lugar do thumbnail Agradecimentos e alteração/redirecionamento do banner do EGO para a página agradecimentos.

--- a/agradecimentos.html
+++ b/agradecimentos.html
@@ -51,7 +51,7 @@
   <div class="container">
     <p class="blog">Campo Grande, 21 de novembro de 2021</p>
     <h6 class="blog">APROVADOS ESCOLA GENERAL OSÓRIO</h6>
-    <h6 class="blog">2021</h6>
+    <h6 class="blog">2021/2022</h6>
     <div class="row text-center padding">
       <!-- Aluno Matheus-->
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-2">
