--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <!-- The slideshow -->
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <a href="inscricoes-ego.html"><img src="./img/provaEgo2021.jpg" class="img-fluid"></a> 
+                <a href="agradecimentos.html"><img src="./img/EGO-2022-resultado.png" class="img-fluid"></a> 
             </div>
             <div class="carousel-item">
                 <a href="hosite-inscricoes-ifms.html"><img src="./img/IFMS-2022.jpg" class="img-fluid" alt="Preparatório IFMS"></a>
@@ -143,10 +143,11 @@
             <!-- VÍDEO 1 -->
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><!-- <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"> -->
                 <div class="card text-white bg-info">
-                    <a href="agradecimentos.html"><img src="./img/Aluno_Matheus.png" alt="Aluno Matheus Poganski" width="300" height="120"></a>
+                    <iframe src="https://www.youtube.com/embed/bEIG-PSJAHQ" title="YouTube video player" frameborder="0" allow="accelerometer; 
+                    autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <div class="card-body">
-                        <h6 class="card-title">Agradecimentos</h6>
-                        <p class="card-text">Aprovados EGO 2021</p>
+                        <h6 class="card-title">Turma Iniciante</h6>
+                        <p class="card-text">Redação<br><br>Preparatório Colégio Militar</p>
                     </div>
                 </div>
             </div>
