Atualização de Versão, de 02/03/2022: Alterado o Material de Apoio da Turma Iniciante. Incluídas apostilas de Português e Matemática. Mantida a apostila de exercícios 'Personagens', da professora Giovana. Excluídas as demais.

--- a/material-de-apoio.html
+++ b/material-de-apoio.html
@@ -59,36 +59,20 @@
       <h6 class="blog"><a name="cm-iniciante-mat">Preparatório CM - Turma Iniciante</a></h6>
       <h6 class="blog" >Matemática</h6>
       <div class="row text-center padding">
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
-          <iframe src="https://drive.google.com/file/d/1qCCirs0KWLrwpwNFGRgMHkm2UnCD_FUR/preview" width="200" height="260" allow="autoplay"></iframe>
-          <p>Aula 2 (18/06/2021) - Apostila <br> Prof.º Gabriel Estábile</p>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
-          <iframe src="https://drive.google.com/file/d/1NtTIwOnyz150CE1njhTNtI46ywb0f8fk/preview" width="200" height="260" allow="autoplay"></iframe>
-          <p>Aula 3 (02/07/2021) - Exercícios de Revisão <br> Prof.º Gabriel Estábile</p>
+        <div class="col-12">
+          <iframe src="https://drive.google.com/file/d/1Dmv9tOX4nOW-adt-RuCpTKefTDB8BOu9/preview" width="200" height="260" allow="autoplay"></iframe>
+          <p>Apostila de Matemática</p>
         </div>
       </div>
       <h6 class="blog"><a name="cm-iniciante-port">Português</a></h6>
       <div class="row text-center padding"> 
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
-          <iframe src="https://drive.google.com/file/d/1UM9ciHES6a8g1R5e9Wv4M_AQD1aPL9ox/preview" width="200" height="260" allow="autoplay"></iframe>
-          <p>Aula de 21/06/2021 - Questões <br> do Texto "Quando a Ciência dá Errado" <br> Prof.º Paulo Junges</p>
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+          <iframe src="https://drive.google.com/file/d/1mSOMhRckIwfrFJBEnsNlWfrB_2Zb6cRA/preview" width="200" height="260" allow="autoplay"></iframe>
+          <p>Apostila de Português</p>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
           <iframe src="https://drive.google.com/file/d/1yuQhuxLw0FmHX4rDIoqJBJPgMoZTRefc/preview" width="260" height="200" allow="autoplay"></iframe>
-          <p>Aula 7 - Exercícios: Personagens <br> Prof.ª Giovana</p>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
-          <iframe src="https://drive.google.com/file/d/1bMzs1BLMzOWX9C3rLXTadITyWHkArmxk/preview" width="200" height="260" allow="autoplay"></iframe>
-          <p>Texto: O Beija-Flor-Violeta <br> Prof.º Paulo Junges</p>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
-          <iframe src="https://drive.google.com/file/d/1D9hT7D5r93KHQqbxToGQKOr4kk-CSlOo/preview" width="200" height="260" allow="autoplay"></iframe>
-          <p>Gabarito - Texto: O Beija-Flor-Violeta <br> Prof.º Paulo Junges</p>
-        </div>
-        <div class="col-12">
-          <iframe src="https://drive.google.com/file/d/1QyjYFKKPCqkw7qjpJ2E6OrxzfOfkWN1D/preview" width="200" height="260" allow="autoplay"></iframe>
-          <p>Aula de 21/06/2021 - Gabarito das Questões <br> do Texto "Quando a Ciência dá Errado"  <br> Prof.º Paulo Junges</p>
+          <p>Exercícios: Personagens <br> Prof.ª Giovana</p>
         </div>
       </div>
         <h6 class="blog"><a name="cm-avancada-mat">Preparatório CM - Turma Avançada</a></h6>
