Atualização de Versão #3, de 02/03/2022: Alterado o Material de Apoio da Turma Avançada. Incluído o link do YouTube.  Mantidas as apostila de Português. Excluídas as demais.

--- a/material-de-apoio.html
+++ b/material-de-apoio.html
@@ -78,17 +78,9 @@
         <h6 class="blog"><a name="cm-avancada-mat">Preparatório CM - Turma Avançada</a></h6>
         <h6 class="blog">Matemática</h6>
         <div class="row text-center padding">
-          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-4">
-            <iframe src="https://drive.google.com/file/d/1ARwXsnRMxW0JF3Y2kNo3SctWgTtgVit3/preview" width="200" height="260" allow="autoplay"></iframe>
-            <p>Prova de Matemática <br> 2017 6º ano original <br> Prof.º João Carlos <br> <a href="https://institutoserintegral.vercel.app/provas-e-simulados.html">Refere-se à prova 53</a></p>
-          </div>
-          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-4">
-            <iframe src="https://drive.google.com/file/d/1NoB8Bg7YfZ-GcezGBZYemmbw4dRNsy-2/preview" width="200" height="260" allow="autoplay"></iframe>
-            <p>Gabarito Prova de Matemática <br> 2017 6º ano original <br> Prof.º João Carlos</p>
-          </div>
-          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-4">
-            <iframe src="https://drive.google.com/file/d/1lDgYRWlvR0I9eruxiYo96kyF5ErdjJ5i/preview" width="200" height="260" allow="autoplay"></iframe>
-            <p>Aula 2 (18/06/2021) - Exercícios da Apostila <br> Prof.º Gabriel Estábile</p>
+          <div class="col-12 social">
+            <a href="https://www.youtube.com/channel/UCv_8h0yZl4kV30T8f7xNoAg" target="_blank" title="Clique aqui para acessar o nosso canal no YouTube.">
+                <i class="fab fa-youtube"></i></a>
           </div>
         </div>
         <h6 class="blog"><a name="cm-avancada-port">Português</a></h6>
