Atualização de Versão #4, de 02/03/2022: Alteração pontual de layout (inclusão da frase 'Clique no botão abaixo para acessar nosso canal no YouTube').

--- a/material-de-apoio.html
+++ b/material-de-apoio.html
@@ -76,7 +76,7 @@
         </div>
       </div>
         <h6 class="blog"><a name="cm-avancada-mat">Preparatório CM - Turma Avançada</a></h6>
-        <h6 class="blog">Matemática</h6>
+        <h6 class="blog">Clique no botão abaixo para acessar nosso canal no YouTube</h6>
         <div class="row text-center padding">
           <div class="col-12 social">
             <a href="https://www.youtube.com/channel/UCv_8h0yZl4kV30T8f7xNoAg" target="_blank" title="Clique aqui para acessar o nosso canal no YouTube.">
