Atualização de Versão #6, de 02/03/2022: Alteração no Índice (inclusão do CM Avançada Matemática e Português).

--- a/material-de-apoio.html
+++ b/material-de-apoio.html
@@ -51,8 +51,7 @@
     <h6 class="indice">Índice</h6>
     <h6 class="indice2"><a href="#cm-iniciante-mat" class="text-primary">CM Iniciante - Matemática</a></h6>
     <h6 class="indice2"><a href="#cm-iniciante-port" class="text-primary">CM Iniciante - Português</a></h6>
-    <h6 class="indice2"><a href="#cm-avancada-mat" class="text-primary">CM Avançada - Matemática</a></h6>
-    <h6 class="indice2"><a href="#cm-avancada-port" class="text-primary">CM Avançada - Português</a></h6>
+    <h6 class="indice2"><a href="#cm-avancada-mat" class="text-primary">CM Avançada - Matemática e Português</a></h6>
     <h6 class="indice2"><a href="#if-mat" class="text-primary">IFMS - Matemática</a></h6>
     <h6 class="indice2"><a href="#if-port" class="text-primary">IFMS - Português</a></h6>
     <div class="container-fluid padding">
