Atualização de Versão #7, de 02/03/2022: Inclusão de subtítulo abaixo do ícone do YouTube.

--- a/material-de-apoio.html
+++ b/material-de-apoio.html
@@ -80,6 +80,7 @@
           <div class="col-12 social">
             <a href="https://www.youtube.com/channel/UCv_8h0yZl4kV30T8f7xNoAg" target="_blank" title="Clique aqui para acessar o nosso canal no YouTube.">
                 <i class="fab fa-youtube"></i></a>
+                <p>Canal do YouTube, onde temos mais de 3 mil questões resolvidas de vários Colégios Militares de todo país.</p>
           </div>
         </div>
         <h6 class="blog"><a name="cm-avancada-port">Português</a></h6>
