--- a/index.html
+++ b/index.html
@@ -64,17 +64,17 @@
     <div id="slides" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
         <ul class="carousel-indicators">
-            <li data-target="#slides" data-slide-to="0" class="active"></li>
+            <!-- <li data-target="#slides" data-slide-to="0" class="active"></li> --> 
+            <li data-target="#slides" data-slide-to="0"></li>
             <li data-target="#slides" data-slide-to="1"></li>
-            <li data-target="#slides" data-slide-to="2"></li>
-            <li data-target="#slides" data-slide-to="3"></li>
-            <li data-target="#slides" data-slide-to="4"></li>
-            <li data-target="#slides" data-slide-to="5"></li>
-            <li data-target="#slides" data-slide-to="6"></li>
+            <!-- <li data-target="#slides" data-slide-to="3"></li> -->
+            <!-- <li data-target="#slides" data-slide-to="4"></li> -->
+            <!-- <li data-target="#slides" data-slide-to="5"></li> -->
+            <!-- <li data-target="#slides" data-slide-to="6"></li> -->
         </ul>
         <!-- The slideshow -->
         <div class="carousel-inner">
-            <div class="carousel-item active">
+            <!--  <div class="carousel-item active">
                 <a href="agradecimentos.html"><img src="./img/EGO-2022-resultado.png" class="img-fluid"></a> 
             </div>
             <div class="carousel-item">
@@ -88,23 +88,23 @@
             </div>
             <div class="carousel-item">
                 <a href="hotsite-resumo-edital.html"><img src="./img/banner-resumo-edital-cm.jpg" class="img-fluid"></a> 
-            </div>
-            <div class="carousel-item">
+            </div> -->
+            <!-- <div class="carousel-item">
                 <a href="calendario-de-aulas.html"> <img src="./img/retorno-aulas.jpg" class="img-fluid"> </a>
-            </div>
-            <div class="carousel-item">
+            </div> -->
+            <div class="carousel-item active">
                 <a href="espiritismo.html"><img src="./img/cosmos2.png" class="img-fluid" alt="Ensino Religioso"></a>
             </div>
         </div>
         <!-- Left and right controls -->
-        <a class="carousel-control-prev" href="#slides" data-slide="prev">
+        <!-- <a class="carousel-control-prev" href="#slides" data-slide="prev"> -->
             <!-- <span class="carousel-control-prev-icon"></span> -->
-            <i class="fas fa-arrow-left"></i>
-        </a>
-        <a class="carousel-control-next" href="#slides" data-slide="next">
+            <!-- <i class="fas fa-arrow-left"></i> -->
+        <!-- </a> -->
+        <!-- <a class="carousel-control-next" href="#slides" data-slide="next"> -->
             <!-- <span class="carousel-control-next-icon"></span> -->
-            <i class="fas fa-arrow-right"></i>
-        </a>
+            <!-- <i class="fas fa-arrow-right"></i> -->
+        <!-- </a> -->
     </div>
     <!-- Jumbotron -->
     
