--- a/index.html
+++ b/index.html
@@ -134,6 +134,16 @@
 
     <!-- Two Column Section -->
 
+    <!-- CORES DOS CARDS -->
+
+    <!-- 
+        Redação - CM iniciante - card text-white bg-info
+        Matematica - CM avancada - card text-black bg-warning
+        MAT - IFMS - card text-white bg-success
+        Matematica CM iniciante - card text-black bg-light
+        Africa - card text-white bg-primary
+    -->
+
     <!-- Vídeos -->
     <div class="container-fluid padding">
         <div class="col-12">
@@ -142,45 +152,44 @@
         <div class="row text-center padding">
             <!-- VÍDEO 1 -->
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><!-- <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"> -->
-                <div class="card text-white bg-info">
-                    <iframe src="https://www.youtube.com/embed/bEIG-PSJAHQ" title="YouTube video player" frameborder="0" allow="accelerometer; 
+                <div class="card text-black bg-light"> 
+                    <iframe src="https://www.youtube.com/embed/_H3Gc2Uxe-U" title="YouTube video player" frameborder="0" allow="accelerometer; 
                     autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <div class="card-body">
                         <h6 class="card-title">Turma Iniciante</h6>
-                        <p class="card-text">Redação<br><br>Preparatório Colégio Militar</p>
+                        <p class="card-text">Matemática<br><br>Noção de Conjunto</p>
                     </div>
                 </div>
             </div>
             <!-- VÍDEO 2 -->
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
-                <div class="card text-black bg-warning">
-                    <iframe src="https://www.youtube.com/embed/MKpenbvjTpM" title="YouTube video player" frameborder="0" allow="accelerometer; 
+                <div class="card text-black bg-light">
+                    <iframe src="https://www.youtube.com/embed/ZE4W29AnVxs" title="YouTube video player" frameborder="0" allow="accelerometer; 
                     autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <div class="card-body">
-                        <h6 class="card-title">Turma Avançada</h6>
-                        <p class="card-text">Matemática<br><br> Revisão de Prova EGO</p>
+                        <h6 class="card-title">Turma Iniciante</h6>
+                        <p class="card-text">Matemática<br><br>Potenciação</p>
                     </div>
                 </div>
             </div>
             <!-- VÍDEO 3 -->
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
-                <div class="card text-white bg-success">
-                    <iframe src="https://www.youtube.com/embed/1nLZYKxqdfY" title="YouTube video player" frameborder="0" allow="accelerometer; 
+                <div class="card text-black bg-light">
+                    <iframe src="https://www.youtube.com/embed/Irgq0hFkaag" title="YouTube video player" frameborder="0" allow="accelerometer; 
                     autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <div class="card-body">
-                        <h6 class="card-title">Preparatório IFMS</h6>
-                        <p class="card-text"> Matemática <br><br>Teorema de Tales</p>
+                        <h6 class="card-title">Turma Iniciante</h6>
+                        <p class="card-text">Matemática<br><br>Sistema de Numeração</p>
                     </div>
                 </div>
             </div>
             <!-- VÍDEO 4 -->
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
-                <div class="card text-white bg-primary">
-                    <iframe src="https://www.youtube.com/embed/zjSM_yGdZm8" title="YouTube video player" frameborder="0" allow="accelerometer; 
+                <div class="card text-white bg-info">
+                    <iframe src="https://www.youtube.com/embed/XfAY458ViQU" title="YouTube video player" frameborder="0" allow="accelerometer; 
                     autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    <div class="card-body">
-                        <h6 class="card-title">África - Ensino Médio</h6>
-                        <p class="card-text"> Matemática <br><br> Produtos Notáveis</p>
+                        <h6 class="card-title">Turma Iniciante</h6>
+                        <p class="card-text">Redação<br><br>Letras Maiúsculas e Minúsculass</p>
                     </div>
                 </div>
             </div>
