Atualização de Versão de 09/03/2022: Incluídos os materias de apoio de 02/03 a 09/03.

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                     <iframe src="https://www.youtube.com/embed/XfAY458ViQU" title="YouTube video player" frameborder="0" allow="accelerometer; 
                     autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         <h6 class="card-title">Turma Iniciante</h6>
-                        <p class="card-text">Redação<br><br>Letras Maiúsculas e Minúsculass</p>
+                        <p class="card-text">Redação<br><br>Letras Maiúsculas e Minúsculas</p>
                     </div>
                 </div>
             </div>
