--- a/material-de-apoio.html
+++ b/material-de-apoio.html
@@ -58,22 +58,38 @@
       <h6 class="blog"><a name="cm-iniciante-mat">Preparatório CM - Turma Iniciante</a></h6>
       <h6 class="blog" >Matemática</h6>
       <div class="row text-center padding">
-        <div class="col-12">
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+          <iframe src="https://drive.google.com/file/d/10SXJ63waPj8p51OxOtu3HvodpdWAs3am/preview" width="200" height="260" allow="autoplay"></iframe>
+          <p>09/03/2022<br>Exercícios de Matemática <br>Prof. Luíz Virgílio</p>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
           <iframe src="https://drive.google.com/file/d/1Dmv9tOX4nOW-adt-RuCpTKefTDB8BOu9/preview" width="200" height="260" allow="autoplay"></iframe>
-          <p>Apostila de Matemática</p>
+          <p>02/03/2022<br>Apostila de Matemática</p>
         </div>
       </div>
       <h6 class="blog"><a name="cm-iniciante-port">Português</a></h6>
       <div class="row text-center padding"> 
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
-          <iframe src="https://drive.google.com/file/d/1mSOMhRckIwfrFJBEnsNlWfrB_2Zb6cRA/preview" width="200" height="260" allow="autoplay"></iframe>
-          <p>Apostila de Português</p>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
-          <iframe src="https://drive.google.com/file/d/1yuQhuxLw0FmHX4rDIoqJBJPgMoZTRefc/preview" width="260" height="200" allow="autoplay"></iframe>
-          <p>Exercícios: Personagens <br> Prof.ª Giovana</p>
-        </div>
-      </div>
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
+            <iframe src="https://drive.google.com/file/d/1jvoGMNBy0TnfWVRhkj_ymWmlqCkieVvy/preview" width="260" height="200" allow="autoplay"></iframe>
+            <p>09/03/2022<br>Redação - Aula 1<br> Prof.ª Giovana</p>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
+           <iframe src="https://drive.google.com/file/d/16OuN43kSsfgs3e44FAofnCzBEk3MGFCu/preview" width="200" height="260" allow="autoplay"></iframe>
+           <p>07/03/2022<br>Redação - Letras Maiúsculas e Minúsculas<br> Prof.ª Alexandra</p>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
+           <iframe src="https://drive.google.com/file/d/1BBl1qCcTxHYTblJtsuY-B6fs2s6s1_Lq/preview" width="200" height="260" allow="autoplay"></iframe>
+           <p>07/03/2022<br>Exercícios de Português<br> Prof.ª Juliana</p>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+           <iframe src="https://drive.google.com/file/d/1mSOMhRckIwfrFJBEnsNlWfrB_2Zb6cRA/preview" width="200" height="260" allow="autoplay"></iframe>
+           <p>02/03/2022<br>Apostila de Português</p>
+         </div>
+         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+           <iframe src="https://drive.google.com/file/d/1yuQhuxLw0FmHX4rDIoqJBJPgMoZTRefc/preview" width="260" height="200" allow="autoplay"></iframe>
+           <p>Exercícios: Personagens <br> Prof.ª Giovana</p>
+         </div>
+    </div>
         <h6 class="blog"><a name="cm-avancada-mat">Preparatório CM - Turma Avançada</a></h6>
         <h6 class="blog">Clique no botão abaixo para acessar nosso canal no YouTube <br> Matemática e Português</h6>
         <div class="row text-center padding">
@@ -97,6 +113,10 @@
         <h6 class="blog"><a name="if-mat">Preparatório IFMS</a></h6>
         <h6 class="blog">Matemática</h6>
         <div class="row text-center padding">
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
+            <iframe src="https://drive.google.com/file/d/1K1p_K6Kbm1hpfMBUkSsJSQqs1YftT2ta/preview" width="200" height="260" allow="autoplay"></iframe>
+            <p>08/03/2022<br>Tratamento da Informação<br>Prof.º Marcelo</p>
+          </div>
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
             <iframe src="https://drive.google.com/file/d/1TFyEt6Bwejcs5ZahCMzlIstdgpdWdveX/preview" width="200" height="260" allow="autoplay"></iframe>
             <p>06/07/2021 - Lista de Exercícios <br> Regra de Três <br> Prof.º Roberti Filho</p>
@@ -125,38 +145,42 @@
             <iframe src="https://drive.google.com/file/d/1zZvVOvZGl2hg8oDaqNJmMFwvM98yUGYR/preview" width="200" height="260" allow="autoplay"></iframe>
             <p>Teorema de Pitágoras<br> Prof.º João Carlos</p>
           </div>
-          <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+          <div class="col-12">
             <iframe src="https://drive.google.com/file/d/1hry2nnW49tGZ9rZurSK9BoU0m6H7MgpB/preview" width="200" height="260" allow="autoplay"></iframe>
             <p>Equações do 1º Grau<br> Prof.º João Carlos</p>
           </div>
         </div>
         <h6 class="blog"><a name="if-port">Português</a></h6>
         <div class="row text-center padding">
-          <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
+            <iframe src="https://drive.google.com/file/d/1QztLZ9bx6ZcvsSQykfMt0RcI0Um6Xzv6/preview" allow="autoplay"></iframe>
+            <p>08/03/2022<br>Português - Aula 01<br>Concordância Nominal<br> Profª Inês</p>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
             <iframe src="https://drive.google.com/file/d/1jZGWwEEKketDJCPPDP3WDlpfA58G2Z_D/preview" allow="autoplay"></iframe>
             <p>29/06/2021 - Classificação das Orações Subordinadas<br> Prof.ª Ayla</p>
           </div>
-          <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
             <iframe src="https://drive.google.com/file/d/1fNYOXfCbwe3Ac4zU60TgKOEtODXOvGO1/preview" width="200" height="260" allow="autoplay"></iframe>
             <p>29/06/2021 - Orações Subordinadas Adverbiais <br> Prof.ª Ayla</p>
           </div>
-          <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
             <iframe src="https://drive.google.com/file/d/1mVfOoMp4tEy8JufgDzOWdeobI4ECMMTD/preview"  width="280" height="220" allow="autoplay"></iframe>
             <p>29/06/2021 - Orações Subordinadas Adverbiais (Slides) <br> Prof.ª Ayla</p>
           </div>
-          <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
             <iframe src="https://drive.google.com/file/d/1dslOHLh5dsm7GsRk9hQop33JqrAv8nF6/preview" allow="autoplay"></iframe>
             <p>29/06/2021 - Orações Subordinadas Adverbiais (Tabela) <br> Prof.ª Ayla</p>
           </div>
-          <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-4">
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
             <iframe src="https://drive.google.com/file/d/1VtSTuSRQ1Rxy2mKsv9Rdw5J3MGCxkKXH/preview" width="200" height="260" allow="autoplay"></iframe>
             <p>29/06/2021 - Orações Subordinadas Adverbiais (Resumo) <br> Prof.ª Ayla</p>
           </div>
-          <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-4">
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
             <iframe src="https://drive.google.com/file/d/1f5tp40h1saMhyjw9iIi5U1N12M68Mo1u/preview" width="200" height="260" allow="autoplay"></iframe>
             <p>22/06/2021 - Conectivos - Orações Coordenadas e Subordinadas <br> Prof.ª Ayla</p>
           </div>
-          <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-4">
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
             <iframe src="https://drive.google.com/file/d/1JDtgAzv-Vku04tlBk6k782AUoSv7Y0-m/preview" width="280" height="220" allow="autoplay"></iframe>
             <p>22/06/2021 - Orações Subordinadas Adjetivas <br> Prof.ª Ayla</p>
           </div>
@@ -169,7 +193,7 @@
             <p>22/06/2021 - Orações Subordinadas Substantivas <br> Prof.ª Ayla</p>
           </div>
         </div>
-    </div>
+
   <footer class="footer">
     <div class="container-fluid padding">
       <div class="row text-center">
